--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+  <p>This is a simple HTML document p1</p>
+  <p>It only has two paragraphs p2</p>
   <noscript>
     <strong>We're sorry but example-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
   </noscript>
